Ignore physical memory ranges that are smaller than 64 KB. Those don't contribute significantly to the usable memory, but possibly make the MTRR setup impossible. Might improve #5550.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35825 a95241bf-73f2-0310-859d-f6bbb57e9c96